metadata/objects/Attendee__c.object
<CustomObject>
    <description>A person with a ticket to the event.</description>
    <fields>
        <fullName>Email__c</fullName>
        <description>The email address of the attendee</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Festival__c</fullName>
        <description>The name of the festival the attendee is going to.</description>
        <label>Festival</label>
        <referenceTo>Festival__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>The phone number of the attendee</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <description>The date the attendee bought their tickets.</description>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Source__c</fullName>
        <description>Where the attendee bought their tickets.</description>
        <label>Purchase Source</label>
        <picklist>
            <picklistValues>
                <fullName>Box Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Official Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ticket_Type__c</fullName>
        <description>The type of ticket purchased.</description>
        <label>Ticket Type</label>
        <picklist>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Admission</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tickets_Purchased__c</fullName>
        <description>The number of tickets that each attendee purchases.</description>
        <label>Tickets Purchased</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Spent__c</fullName>
        <description>The formula to calculate how much each attendee has spent on festival tickets.</description>
        <formula>IF( ISPICKVAL( Ticket_Type__c , &quot;VIP&quot;) , 100 *  Tickets_Purchased__c , 50 *  Tickets_Purchased__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Ticket_Purchasing_Limit</fullName>
        <active>true</active>
        <description>An attendee cannot purchase less than 1 ticket or more than 8 tickets to the event.</description>
        <errorConditionFormula>Tickets_Purchased__c  &gt;=  8 ||  Tickets_Purchased__c  &lt;=  1</errorConditionFormula>
        <errorMessage>Please purchase between 1 and 8 tickets.</errorMessage>
    </validationRules>
</CustomObject>